change footer position

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,5 +30,7 @@
       </div>
     </form>
   </div>
-  <div class="footer">Designed by Lionel Traore</div>
+  <div class="footer">
+    <div class="footer__container">Designed by Lionel Traore</div>
+  </div>
 </div>
