--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -125,6 +125,10 @@
   width: 100%;
   box-sizing: border-box;
   background-color: rgba($color: #777, $alpha: 0.2);
+
+  &__container {
+    position: relative;
+  }
 }
 
 @keyframes expand {
