--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,8 @@
 .page-wrapper {
-  background-color: #fff;
+  background-color: #fff5d9;
   height: 100vh;
   width: 100vw;
+  min-height: 100%;
 }
 
 .form-wrapper {
